src/test/deca/context/valid/loop_avec_while.deca
//description:
// un peu de boocle avec while et des increments
//
//Resultats:
//Ok

{
int minute;
minute = 0;

    while (minute < 3) {
        println("Barca minute =", minute);
        minute = minute + 1;
    }

    println("Visca Barca");
}


