src/test/deca/context/invalid/arithmetique_string_avec_integer.deca
// Description :
// impossible de sommer string et un integer , donc erreur...
//
// Resultats :
// Echec
// Regle : Opération '+' interdite entre string et int (règle (3.33))

{
    int champions;
    champions = "barca" + 2;
}
